--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -97,9 +97,9 @@
         }*/
         a span {
             //color: #222222;
-            color: var(--bs-body-color);
-			font-weight:600;
-            margin-bottom: 0.2rem;
+            //color: var(--bs-body-color);
+            //font-weight:600;
+            //margin-bottom: 0.2rem;
         }
         p {
             margin-bottom: 0;
